# LimeSDR-Micro_FW

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  armcc.cmake  openocd_la9310.cfg
.github/workflows/: cmake-build.yml
FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
bootloader/: CMakeLists.txt  bootloader.c  bootloader.ld  eeprom.ld  eeprom_header.c  pcie_init.c  romboot_header.c
bootstrap/: CMakeLists.txt  boot_strapper.c  boot_strapper.ld  log.c  start.S  utils.c
bootstrap/i2c/: i2c.c  i2c.h
bootstrap/include/: common.h  error_codes.h  immap.h  io.h  platform.h  types.h
cmake/toolchain/: armgcc.cmake
include/: la9310_host_if.h  la9310_v2h_if.h  rfic_hif.h  rfic_sw_cmd.h
la9310/: CMakeLists.txt  boot_header.h  la9310_boot_header.h
la9310/cm4/: config.h  core_cm4.h  immap.h  io.h
limesuiteng/embedded/: CMakeLists.txt
limesuiteng/embedded/lms7002m/: CMakeLists.txt  calibrations.c  lms7002m.c  privates.c  privates.h  save_state.c  spi_batch.c  spi_batch.h
src/: CMakeLists.txt  bootloader_header.c  fwloader.c  fwloader.h  la9310_irq.c  limesdr_commands.c  limesdr_micro_init.c  lms7002m_init.c  log.c  log.h  main.c  queue.c  queue.h  romboot_header.c
src/drivers/avi/: la9310_avi.c  la9310_avi_ds.h  la9310_vspa_dma.c  la9310_vspa_dma.h
src/drivers/dcs/: la9310_dcs.c  la9310_dcs.h
src/drivers/dspi/: dspi_test.c  fsl_dspi.c
src/drivers/edma/: la9310_edma.c  la9310_edma.h
src/drivers/i2c/: la9310_i2c.c  la9310_i2c.h
src/drivers/misc/: la9310_gpio.c  la9310_gpio.h  mem_log.c
src/drivers/pcie/: la9310_pcie.c
src/drivers/phy_timer/: phytimer.c  phytimer.h
src/drivers/serial/: debug_console.c  print_scan.c  serial_ns16550.c
src/drivers/timesync/: sync_timing_device.c  sync_timing_device_cli.c
src/drivers/watchdog/: la9310_watchdog.c  la9310_watchdog.h
src/include/: bbdev_ipc.h  debug_console.h  fsl_dspi.h  la9310.h  la9310_avi.h  la9310_dcs_api.h  la9310_i2cAPI.h  la9310_info.h  la9310_irq.h  la9310_main.h  la9310_pci.h  la9310_tmu.h
src/limesdr_micro/: CMakeLists.txt  eeprom.c  eeprom.h  iqplayer_commands.h  leds.c  limesdr_commands.c  limesdr_micro.h  limesdr_micro_init.c  m4_commands.h  scheduled_commands.c  scheduled_commands.h  timer64.c  timer64.h  tx_control.c  tx_control.h
src/platform/ARM_CM4/: exceptions.c  la9310.ld  la9310_host_pcie_mode.ld  soc.c  startup.c
src/platform/ARM_CM4/include/: isrvectors.h
src/platform/boards/la9310/: board.c  hardware_init.c
src/sw_cmd_engine/: sw_cmd_engine.c
src/utils/: task_stats.c
